@@ -1,5 +1,7 @@
 2006-07-20  Han-Wen Nienhuys  <hanwen@lilypond.org>
 
+	* scripts/lilypond-book.py (main): add support for --pdf. 
+
 	* lily/spacing-spanner.cc (calc_common_shortest_duration): use
 	callback to compute common shortest duration.
 	(set_springs): typo.
